fixes height of overlap banner shadow

--- a/_scss/components/_banner.scss
+++ b/_scss/components/_banner.scss
@@ -27,7 +27,7 @@
             display: block;
             background: $white;
             width: $container-width;
-            height: 10em;
+            height: 12em;
             position: absolute;
             right: 0; bottom: -3.5em; left: 0;
             margin: 0 auto;
